--- a/base_multipage/package.json
+++ b/base_multipage/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "webpack-dev-server --env development --open --config build/webpack.common.conf.js",
-    "build": "webpack --env production --config build/webpack.common.conf.js",
+    "dev": "webpack-dev-server --env development --open --config build/webpack.common.js",
+    "build": "webpack --env production --config build/webpack.common.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,6 +14,7 @@
     "autoprefixer": "^9.4.10",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^0.1.19",
@@ -26,6 +27,7 @@
     "imagemin": "^6.1.0",
     "imagemin-pngquant": "^7.0.0",
     "img-loader": "^3.0.1",
+    "lodash-webpack-plugin": "^0.11.5",
     "node-sass": "^4.9.2",
     "postcss-loader": "^3.0.0",
     "postcss-sprites": "^4.2.1",
