--- a/vue_multipage/package.json
+++ b/vue_multipage/package.json
@@ -36,6 +36,7 @@
     "postcss-loader": "^3.0.0",
     "postcss-sprites": "^4.2.1",
     "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.0.0",
     "purify-css": "^1.2.5",
     "purifycss-webpack": "^0.7.0",
