--- a/vue_multipage/package.json
+++ b/vue_multipage/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "vue_multipage",
+  "name": "gao-li-gong",
   "version": "1.0.0",
-  "description": "",
+  "description": "高黎贡山生物多样性展示平台",
   "main": "app.js",
   "scripts": {
     "dev": "webpack-dev-server --env.development --open --config build/webpack.common.js",
     "build": "webpack --env.production --config build/webpack.common.js",
-    "compress": "webpack --env.production --env.compress --config build/webpack.common.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compress": "webpack --env.production --env.compress --config build/webpack.common.js"
   },
-  "author": "haoqiu@caih.com",
-  "license": "ISC",
+  "author": "https://github.com/gao-li-gong",
+  "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.3.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.4.0",
     "@babel/preset-env": "^7.3.4",
     "autoprefixer": "^9.4.10",
     "babel-loader": "^8.0.5",
@@ -52,6 +52,8 @@
     "webpack-merge": "^4.1.3"
   },
   "dependencies": {
+    "@babel/runtime": "^7.4.2",
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "lodash-es": "^4.17.11",
