--- a/vue_spa/package.json
+++ b/vue_spa/package.json
@@ -15,7 +15,9 @@
     "@babel/core": "^7.3.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.4.0",
+    "@babel/runtime": "^7.4.2",
     "@babel/preset-env": "^7.3.4",
+    "babel-runtime": "^6.26.0",
     "autoprefixer": "^9.4.10",
     "babel-loader": "^8.0.5",
     "babel-plugin-lodash": "^3.3.4",
@@ -52,9 +54,10 @@
     "webpack-merge": "^4.1.3"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
-    "babel-runtime": "^6.26.0",
     "lodash-es": "^4.17.11",
+    "qs": "^6.7.0",
     "vue": "^2.6.8",
     "vue-router": "^3.0.2",
     "vuex": "^3.1.0"
