--- a/vue_spa/package.json
+++ b/vue_spa/package.json
@@ -4,62 +4,60 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "webpack-dev-server --env.development --open --config webpack.config.js",
-    "build": "webpack --env.production --config webpack.config.js",
-    "compress": "webpack --env.production --env.compress --config webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --env.development --open --config ./build/webpack.common.js",
+    "dll": "webpack --config ./build/webpack.dll.js",
+    "build": "webpack --env.production --config ./build/webpack.common.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.4.0",
-    "@babel/runtime": "^7.4.2",
-    "@babel/preset-env": "^7.3.4",
-    "babel-runtime": "^6.26.0",
-    "autoprefixer": "^9.4.10",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-lodash": "^3.3.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "clean-webpack-plugin": "^0.1.19",
-    "compression-webpack-plugin": "^2.0.0",
-    "css-loader": "^1.0.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^3.0.1",
-    "glob-all": "^3.1.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "imagemin": "^6.1.0",
-    "img-loader": "^3.0.1",
-    "lodash-webpack-plugin": "^0.11.5",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.9.2",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/polyfill": "^7.8.7",
+    "@babel/preset-env": "^7.9.5",
+    "add-asset-html-webpack-plugin": "^3.1.3",
+    "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "core-js": "^3.6.5",
+    "css-loader": "^3.5.2",
+    "file-loader": "^6.0.0",
+    "fs-extra": "^9.0.0",
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^4.2.0",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
-    "postcss-sprites": "^4.2.1",
-    "pug": "^2.0.3",
+    "postcss-preset-env": "^6.7.0",
+    "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
-    "purify-css": "^1.2.5",
-    "purifycss-webpack": "^0.7.0",
-    "sass-loader": "^7.0.3",
-    "style-loader": "^0.21.0",
-    "url-loader": "^1.1.2",
-    "vue-loader": "^15.7.0",
-    "vue-template-compiler": "^2.6.8",
-    "webpack": "^4.16.1",
-    "webpack-bundle-analyzer": "^3.1.0",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.3"
+    "style-loader": "^1.1.4",
+    "thread-loader": "^2.1.3",
+    "url-loader": "^4.1.0",
+    "vue-loader": "^15.9.1",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
+    "webpack-merge": "^4.2.2",
+    "workbox-webpack-plugin": "^5.1.2"
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "babel-polyfill": "^6.26.0",
     "lodash-es": "^4.17.11",
-    "qs": "^6.7.0",
     "vue": "^2.6.8",
     "vue-router": "^3.0.2",
     "vuex": "^3.1.0"
+  },
+  "browserslist": {
+    "development": [
+      "last 1 chrome version"
+    ],
+    "producttion": [
+      ">0.2%",
+      "not dead",
+      "no op_mini all"
+    ]
   }
 }
